cmake_minimum_required(VERSION 3.1)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

project(ISO22133 LANGUAGES C)

set(ISO22133_TARGET ${TARGET_NAMESPACE}${PROJECT_NAME})

include(GNUInstallDirs)

add_library(${ISO22133_TARGET} SHARED
        ${CMAKE_CURRENT_SOURCE_DIR}/positioning.c
        ${CMAKE_CURRENT_SOURCE_DIR}/iso22133.c
)

target_include_directories(${ISO22133_TARGET} PUBLIC
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
	$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

set_property(TARGET ${ISO22133_TARGET} PROPERTY
	PUBLIC_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/iso22133.h
)
set_property(TARGET ${ISO22133_TARGET} APPEND PROPERTY
	PUBLIC_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/positioning.h
)

install(CODE "MESSAGE(STATUS \"Installing target ${ISO22133_TARGET}\")")
install(TARGETS ${ISO22133_TARGET} 
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)
